# Chess

./: .gitignore  CMakeLists.txt
src/: Types.h  main.cpp
src/Algorithm/: Algorithm.cpp  Algorithm.h
src/Algorithm/Stockfish/: Stockfish.h
src/Algorithm/UCI/: UCI.cpp  UCI.h
src/Board/: Board.cpp  Board.h  Zobrist.cpp  Zobrist.h
src/Bot/: Bot.cpp  Bot.h
src/Bot/Algorithm/: Algorithm.cpp  Algorithm.h
src/Bot/Algorithm/Stockfish/: Stockfish.cpp  Stockfish.h
src/Bot/UCI/: UCI.cpp  UCI.h
src/Debug/: Debug.cpp  Debug.h
src/GameLogic/: GameLogic.cpp  GameLogic.h
src/GameLogic/Bitboard Utility/: BitboardUtility.h
src/GameLogic/BitboardUtility/: BitboardUtility.h
src/GameLogic/MoveGeneration/: MoveGeneration.cpp  MoveGeneration.h
src/GameLogic/Precomputed Data/: PrecomputedData.cpp  PrecomputedData.h
src/GameLogic/PrecomputedData/: PrecomputedData.h
src/GameLogic/UCIGUI/: UCIGUI.cpp  UCIGUI.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Setup/: Setup.cpp  Setup.h
